--- a/limitter_ios/Info.plist
+++ b/limitter_ios/Info.plist
@@ -9,6 +9,7 @@
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>bluetooth-central</string>
+		<string>bluetooth-central</string>
 	</array>
 	<key>NSBluetoothPeripheralUsageDescription</key>
 	<string>Reading CGM Data</string>
